Add a MissingValue class to be able to generate SAS7BDAT files with missing values other than "."